[package]
name = "fusion_plus_sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = "1.0.23"
alloy-merkle-tree = "0.7.4"
chrono = "0.4.41"
rand = "0.9.2"
reqwest = "0.12.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
serde_path_to_error = "0.1.17"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
