[package]
name = "relayer"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = "1.0.23"
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
serde = "1.0.219"
serde_json = "1.0.141"
tokio = { version = "1.47.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["normalize-path"] }
tower-layer = "0.3.3"
